Fixes deprecated value constructors Long,Integer,Float, Boolean